--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Klara Pigorsch</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css" integrity="sha512-ADrqa2PY1TZtb/MoLZIZu/Z/LlPaWQeDMBV73EMwjGam43/JJ5fqW38Rq8LJOVGCDfrJeOMS3Q/wRUVzW5DkjQ==" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-        <link rel="stylesheet" href="style.css" />
-        <script src="main.js"></script>
+        <link rel="stylesheet" href="style.css?##CACHEBUSTER##" />
+        <script src="main.js?##CACHEBUSTER##"></script>
     </head>
     <body>
         <section id="hero" class="hero is-success is-fullheight">
@@ -47,18 +47,7 @@
 
         <script>
             main();
-
-            (function(f, a, t, h, o, m){
-                a[h]=a[h]||function(){
-                    (a[h].q=a[h].q||[]).push(arguments)
-                };
-                o=f.createElement('script'),
-                m=f.getElementsByTagName('script')[0];
-                o.async=1; o.src=t; o.id='fathom-script';
-                m.parentNode.insertBefore(o,m)
-            })(document, window, '//stats.flopp.net/t.js', 'fathom');
-            fathom('set', 'siteId', 'HSCJH');
-            fathom('trackPageview');
         </script>
+<!-- TRACKER-CODE -->
     </body>
 </html>
