--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                                 <i class="fas fa-futbol"></i>
                             </span>
                         </a>
+                        <a href="mailto:mail@klara-pigorsch.de" target=_blank>
+                            <span class="icon is-large">
+                                <i class="fas fa-envelope"></i>
+                            </span>
+                        </a>
                     </h2>
                 </div>
             </div>
