--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <i class="fas fa-futbol"></i>
                             </span>
                         </a>
-                        <a href="mailto:mail@klara-pigorsch.de" target=_blank>
+                        <a href="mailto:hallo@klara-pigorsch.de" target=_blank>
                             <span class="icon is-large">
                                 <i class="fas fa-envelope"></i>
                             </span>
