--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         <link rel="stylesheet" href="style.css?##CACHEBUSTER##" />
         <script src="main.js?##CACHEBUSTER##"></script>
     </head>
-    <body>
-        <section id="hero" class="hero is-success is-fullheight">
+    <body class="color1">
+        <section id="hero" class="hero is-fullheight">
             <div class="hero-body">
                 <div class="container has-text-centered">
-                    <h1 class="title">
+                    <h1 class="title has-text-light is-unselectable">
                         Klara Pigorsch
                     </h1>
                     <h2 class="subtitle is-size-3">
                         <a href="https://www.instagram.com/klara.pi.14/" target=_blank>
-                            <span class="icon is-large">
+                            <span class="icon is-large has-text-light">
                                 <i class="fab fa-instagram"></i>
                             </span>
                         </a>
                         <a href="https://www.jfv-freiburg-ost.de/c-juniorinnen-u-15" target=_blank>
-                            <span class="icon is-large">
+                            <span class="icon is-large has-text-light">
                                 <i class="fas fa-futbol"></i>
                             </span>
                         </a>
                         <a href="mailto:hallo@klara-pigorsch.de" target=_blank>
-                            <span class="icon is-large">
+                            <span class="icon is-large has-text-light">
                                 <i class="fas fa-envelope"></i>
                             </span>
                         </a>
